[package]
name = "bluesnow"
version = "0.1.0"
authors = ["Jack Halford <jack@crans.org>", "William Escande <wescande@student.42.fr>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
bitflags = "1.0.1"
spin = "0.4"
slab_allocator = "0.3.5"
x86 = { path = "x86" }				# forked for IA-32 compat
multiboot2 = { path = "multiboot2-elf64" }	# forked to add rsdp tag

[dependencies.raw-cpuid]
# need to use github/master because of features not yet on crates.io
git = "https://github.com/gz/rust-cpuid"
features = ["nightly"]

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

#[dependencies.compiler_builtins]
##I'm waiting for somebody to port i386/udivdi3.S ... :(((
#git = "https://github.com/rust-lang-nursery/compiler-builtins"
